--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,14 +6,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v2
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
     - name: Build the Docker image
-      env:
-        DOCKERHUB_USERNAME: "${{ secrets.DOCKERHUB_USERNAME }}"
-        DOCKERHUB_PASSWORD: "${{ secrets.DOCKERHUB_PASSWORD }}"
       run: |
-        image_name="pschichtel/rspamd:latest"
-        echo "${DOCKERHUB_PASSWORD}" | docker login -u "${DOCKERHUB_USERNAME}" --password-stdin
-        docker build . --file Dockerfile --tag "$image_name"
-        docker push "$image_name"
+        image_name="ghcr.io/pschichtel/rspamd:latest"
+        podman build -t "$image_name" .
+        podman push "$image_name"
 
